# codemkin

./: .gitignore  Cargo.toml  README.md  out  test  test.js
.cdmkn/: files.db
client/: package-lock.json  package.json
client/.cdmkn/: files.db
client/.outfiles/2020-05-12-23-52-02/11/: App.tsx
client/src/: App.tsx  Timelapse.tsx  changes.ts
outfiles/2020-05-08 06:07:41.074888 UTC/: changes.json  main.rs
src/: history.rs  init.rs  main.rs  types.rs  uploader.rs  utils.rs  watcher.rs
src/.cdmkn/: files.db
tmp/: binarySearch.js
tmp/.cdmkn/: config.toml  files.db
tmp/.outfiles/: codemkin.db
tmp/.outfiles/2020-05-13-00-32-11/0/: changes.json
tmp/.outfiles/2020-05-13-00-34-55/0/: changes.json
tmp/.outfiles/2020-05-13-00-42-26/0/: scratch
tmp/.outfiles/2020-05-13-00-46-44/1/: binarySearch.js  changes.json
