[package]
name = "cdmkn"
version = "0.1.0"
authors = ["Nicholas Yang <ny585@nyu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
chrono = { version = "0.4.11", features = ["serde"] }
color-eyre = "0.5.11"
ctrlc = "3.2.0"
difference = "2.0"
dirs = "3.0.2"
eyre = "0.6.5"
ignore = "0.4.15"
rusqlite = { version = "0.27.0", features = ["bundled", "chrono"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.8", features = ["full"] }
toml = "0.5.6"
